# BiternionNets-ROS

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  train.py  training_utils.py
launch/: dump_tracks.launch  dump_ubd.launch  dump_ubdcpp.launch  predict.launch  predict_both.launch  predict_spencer.launch  predict_strands.launch
models/: body_80_200.py  full_80_240.py  head_50_50.py  head_80_50.py  v1.py  v1_body_80_200.py  v1_full_80_240.py  v1_head_50_50.py  v1_head_80_50.py  v2_head_80_50.py
scripts/: common.py  data_labeling.py  df_extras.py  dump_ubd.py  playanddump.sh  playanddump_spencer.sh  playanddump_ubd.sh  predict.py  train.py  training_utils.py
scripts/nets/: head_50_50.py
src/: count_ubd.cpp  depth.cpp  dump_tracks.cpp  dump_ubd.cpp  mkpath.c  subtractbg.cpp
